# personal-assistant

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
data/skills/: prepare-day.md  prepare-meeting.md  weekly-review.md
docs/: PRD.md
docs/adr/: 001-personal-assistant-mvp.md  002-daily-operations.md  003-inline-database-task-extraction.md  004-remove-calendar-from-prepare-meeting.md
src/personal_assistant/: __init__.py  cli.py  schemas.py  storage.py
tests/: conftest.py  test_config.py  test_edge_cases.py  test_entity_add.py  test_entity_delete.py  test_entity_list.py  test_entity_show.py  test_entity_update.py  test_integration_flows.py  test_mapping.py  test_memory.py  test_remember.py
